gitignore: add checker to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Temporary Items
 
 ## User settings
 xcuserdata/
+checkerNN.py
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
